--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ allprojects{
 	   compile('org.slf4j:slf4j-api:1.7.7')
 	   compile('junit:junit:4.4')
 	   compile('org.assertj:assertj-core:2.9.0')
+	   
+	   compile('org.springframework:spring-context:4.1.3.RELEASE')
+	   compile('org.springframework:spring-context-support:4.1.3.RELEASE')
 	}
 	
 	group = 'knight.su.dawn'
