--- a/build.gradle
+++ b/build.gradle
@@ -50,11 +50,13 @@ allprojects{
 	   compile('org.apache.commons:commons-lang3:3.3.2')
 	   compile('commons-codec:commons-codec:1.4')
 	   compile('org.slf4j:slf4j-api:1.7.7')
-	   compile('junit:junit:4.4')
+	   compile('junit:junit:4.12')
 	   compile('org.assertj:assertj-core:2.9.0')
 	   
 	   compile('org.springframework:spring-context:4.1.3.RELEASE')
 	   compile('org.springframework:spring-context-support:4.1.3.RELEASE')
+	   
+	   compile('org.springframework:spring-test:4.1.3.RELEASE')
 	}
 	
 	group = 'knight.su.dawn'
